# gdg_expense_vertex_ai

./: docker-compose.yaml
.github/workflows/: static.yml
expense_ai_be/: .gitignore  Dockerfile  alembic.ini  credentials.json  entrypoint.sh  pyproject.toml
expense_ai_be/config/: logging.yml
expense_ai_be/database/: env.py
expense_ai_be/database/versions/: 2024_08_28_1740_init.py
expense_ai_be/expense_ai/: __init__.py  server.py
expense_ai_be/expense_ai/connections/: ai_v1.py  ai_v2.py  db.py  zipline.py
expense_ai_be/expense_ai/middlewares/: APIKeyMiddleware.py
expense_ai_be/expense_ai/models/: auth.py  exceptions.py  groups.py  users.py
expense_ai_be/expense_ai/repositories/: auth.py  expenses.py  group.py  user.py
expense_ai_be/expense_ai/routers/: __init__.py  auth.py  expenses.py  groups.py  users.py
expense_ai_be/expense_ai/utils/: auth.py  config.py  logging.py
expense_ai_be/web/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
expense_ai_be/web/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
expense_ai_fe/: Dockerfile  README.md  nginx.conf  pubspec.yaml
expense_ai_fe/lib/: main.dart
expense_ai_fe/linux/: CMakeLists.txt  my_application.cc
expense_ai_fe/test/: widget_test.dart
expense_ai_fe/web/: index.html  manifest.json
expense_ai_fe/windows/: CMakeLists.txt
presentation/: package.json  pnpm-lock.yaml  slides.md  uno.config.ts  vite.config.ts
presentation/components/: LayoutFooter.vue  LayoutHeader.vue
presentation/layouts/: default.vue  intro.vue  joke.vue  (+5 more)
(+45 files in other folders)
